amf-cli/shared/src/test/resources/parser-results/raml/error/cycle-references/typeFragment.raml
#%RAML 1.0 Library
uses:
  lib: yaKassa.raml
types:
  R: lib.InvoiceId